@@ -1867,6 +1867,19 @@ name|multiValued
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|properties
+operator|.
+name|add
+argument_list|(
+name|getPropertyName
+argument_list|(
+name|LARGE_FIELD
+argument_list|)
+argument_list|,
+name|isLarge
+argument_list|()
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|sortMissingFirst
